[gd_scene load_steps=20 format=3 uid="uid://drbrdi2nhqnms"]

[ext_resource type="PackedScene" uid="uid://b8d6ugoicje23" path="res://scenes/Levels/level.tscn" id="1_6e6bn"]
[ext_resource type="Texture2D" uid="uid://d1chxfxfq3qdb" path="res://graphics/ground/stones.png" id="2_ence7"]
[ext_resource type="Script" path="res://scenes/Levels/outside.gd" id="2_wp3i7"]
[ext_resource type="Texture2D" uid="uid://b6vgtdlv1q4oi" path="res://graphics/decals/dirt_patch.png" id="3_w4gt6"]
[ext_resource type="Texture2D" uid="uid://0di3wr824dh0" path="res://graphics/tilesets/outside_walls.png" id="5_a26nx"]
[ext_resource type="Texture2D" uid="uid://ds73c0y2o3c7g" path="res://graphics/tilesets/soil.png" id="6_c8ii3"]
[ext_resource type="Texture2D" uid="uid://bn0ep18pi8eyr" path="res://graphics/decals/moss/moss_1.png" id="6_k5ami"]
[ext_resource type="Texture2D" uid="uid://b85865atvqwj2" path="res://graphics/decals/moss/moss_2.png" id="7_wsoal"]
[ext_resource type="Texture2D" uid="uid://bxctijwcnwxcs" path="res://graphics/decals/moss/moss_3.png" id="8_ae48u"]
[ext_resource type="Texture2D" uid="uid://hryfqx232b2u" path="res://graphics/decals/moss/moss_4.png" id="9_twew7"]
[ext_resource type="PackedScene" uid="uid://pkrfshgfxck3" path="res://scenes/Objects/Lights/FanLight/light_fan_animation.tscn" id="10_3j4xe"]
[ext_resource type="Texture2D" uid="uid://cykbka7cqqdo" path="res://graphics/decals/moss/moss_5.png" id="10_uytag"]
[ext_resource type="PackedScene" uid="uid://ctba5xuatbrnk" path="res://scenes/House/house.tscn" id="11_8e7g4"]
[ext_resource type="PackedScene" uid="uid://dqd5laswbypek" path="res://scenes/Objects/SteamVent/steam_vent.tscn" id="12_0mfos"]
[ext_resource type="PackedScene" uid="uid://dvi83pqgsama0" path="res://scenes/Objects/Drone/drone.tscn" id="17_8npj8"]
[ext_resource type="PackedScene" uid="uid://bfj25hkhfd5o1" path="res://scenes/Objects/Gate/gate.tscn" id="18_oevxa"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_grrlr"]
resource_name = "Walls"
texture = ExtResource("5_a26nx")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-67.5, -62, 195, -63, 195, 58, -66.5, 63)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, -58, 195, -60, 195, 60, -195, 60)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(62, -62, 60, 195, -60, 195, -58, -62)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-61.5, -66, 195, -63, 195, 56.5685, 59.397, 57.9828, 59.397, 195, -60.8112, 195)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(58, -195, 60, 195, -60, 195, -60, -195)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-61, 67.5, -63, -195, 56.5685, -195, 57.9828, -59.397, 195, -59.397, 195, 60.8112)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(68, 66, -195, 60, -195, -60, 64, -64)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(61, -67.5, 63, 195, -56.5685, 195, -57.9828, 59.397, -195, 59.397, -195, -60.8112)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(67.5, 61, -195, 63, -195, -56.5685, -59.397, -57.9828, -59.397, -195, 60.8112, -195)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60, 44, -60, -195, 60, -195, 60, 50)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vxua5"]
resource_name = "Soil"
texture = ExtResource("6_c8ii3")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_a530f"]
tile_size = Vector2i(390, 390)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_grrlr")
sources/1 = SubResource("TileSetAtlasSource_vxua5")

[node name="Outside" instance=ExtResource("1_6e6bn")]
script = ExtResource("2_wp3i7")

[node name="Soil" type="Sprite2D" parent="Ground" index="0"]
texture_repeat = 2
position = Vector2(-15.9998, 24)
scale = Vector2(1.4995, 2.12957)
texture = ExtResource("2_ence7")
region_enabled = true
region_rect = Rect2(0, 0, 16000, 10000)

[node name="TileMap" type="TileMap" parent="Ground" index="1"]
position = Vector2(745.998, 274)
scale = Vector2(0.999998, 0.999998)
tile_set = SubResource("TileSet_a530f")
format = 2
layer_0/name = "Soil"
layer_0/tile_data = PackedInt32Array(65529, 1, 0, 65530, 131073, 0, 131065, 1, 1, 196601, 1, 2, 131066, 131073, 1, 196602, 131073, 2, 4, 1, 2, 9, 65537, 1, 393225, 1, 2, -196604, 1, 1, -131068, 1, 1, -65532, 1, 1, 5, 65537, 2, 6, 65537, 2, 7, 65537, 2, 8, 65537, 2, 65545, 1, 1, 131081, 1, 1, 196617, 1, 1, 262153, 1, 1, 327689, 1, 1, 393226, 65537, 2, 393227, 65537, 2, 393228, 65537, 2, 393229, 131073, 2, -196595, 131073, 0, -131059, 131073, 1, -65523, 131073, 1, 13, 131073, 1, 65549, 131073, 1, 131085, 131073, 1, 196621, 131073, 1, 262157, 131073, 1, 327693, 131073, 1, -196603, 65537, 0, -196602, 65537, 0, -196601, 65537, 0, -196600, 65537, 0, -196599, 65537, 0, -196598, 65537, 0, -196597, 65537, 0, -196596, 65537, 0, 65548, 65537, 1, 12, 65537, 1, -65524, 65537, 1, -131060, 65537, 1, -131061, 65537, 1, -131062, 65537, 1, -131063, 65537, 1, -131064, 65537, 1, -131065, 65537, 1, -131066, 65537, 1, -131067, 65537, 1, -65531, 65537, 1, -65530, 65537, 1, -65529, 65537, 1, -65528, 65537, 1, -65527, 65537, 1, -65526, 65537, 1, 10, 65537, 1, 65546, 65537, 1, 131082, 65537, 1, 196618, 65537, 1, 262154, 65537, 1, 327690, 65537, 1, 327691, 65537, 1, 262155, 65537, 1, 196619, 65537, 1, 131083, 65537, 1, 65547, 65537, 1, 11, 65537, 1, -65525, 65537, 1, 131084, 65537, 1, 196620, 65537, 1, 262156, 65537, 1, 327692, 65537, 1, -65544, 1, 1, -65543, 65537, 1, -65542, 65537, 1, -131080, 1, 0, -8, 1, 2, -131079, 65537, 0, -7, 65537, 2, -131078, 65537, 0, -6, 65537, 2, -131077, 131073, 0, -65541, 131073, 1, -5, 131073, 2)
layer_1/name = "Walls"
layer_1/tile_data = PackedInt32Array(65530, 65536, 0, 65529, 65536, 0, 65528, 65536, 0, 65527, 65536, 0, 65526, 0, 0, 4, 65536, 2, -65532, 0, 2, -131068, 0, 2, -196604, 0, 2, 5, 65536, 0, 6, 65536, 0, 7, 65536, 0, 8, 65536, 0, 9, 131072, 1, 65545, 0, 2, 131081, 0, 2, 196617, 0, 2, 262153, 0, 2, 327689, 0, 2, 393225, 65536, 2, 393226, 65536, 0, 65531, 131072, 0)

[node name="Decoration" type="Sprite2D" parent="Ground" index="2"]
modulate = Color(0.870588, 0.886275, 0.54902, 1)
position = Vector2(308, 456)
scale = Vector2(0.279687, 0.279687)
texture = ExtResource("3_w4gt6")

[node name="Moss1" type="Sprite2D" parent="Ground" index="3"]
position = Vector2(2449.5, 1512)
texture = ExtResource("6_k5ami")

[node name="Moss2" type="Sprite2D" parent="Ground" index="4"]
position = Vector2(1134.5, 1015)
texture = ExtResource("7_wsoal")

[node name="Moss3" type="Sprite2D" parent="Ground" index="5"]
position = Vector2(4278, 621)
texture = ExtResource("8_ae48u")

[node name="Moss4" type="Sprite2D" parent="Ground" index="6"]
position = Vector2(2686, 637)
texture = ExtResource("9_twew7")

[node name="Moss6" type="Sprite2D" parent="Ground" index="7"]
position = Vector2(3057, 644)
texture = ExtResource("9_twew7")

[node name="Moss7" type="Sprite2D" parent="Ground" index="8"]
position = Vector2(3057, 644)
texture = ExtResource("9_twew7")

[node name="Moss8" type="Sprite2D" parent="Ground" index="9"]
position = Vector2(3381, 590)
rotation = -2.86485
texture = ExtResource("9_twew7")

[node name="Moss9" type="Sprite2D" parent="Ground" index="10"]
position = Vector2(4030, 621)
rotation = 0.0530083
texture = ExtResource("9_twew7")

[node name="Moss5" type="Sprite2D" parent="Ground" index="11"]
position = Vector2(2842.5, 1667)
texture = ExtResource("10_uytag")

[node name="Moss10" type="Sprite2D" parent="Ground" index="12"]
position = Vector2(3582, 561)
texture = ExtResource("10_uytag")

[node name="Moss11" type="Sprite2D" parent="Ground" index="13"]
position = Vector2(3603, 616)
texture = ExtResource("10_uytag")

[node name="Moss12" type="Sprite2D" parent="Ground" index="14"]
position = Vector2(3693, 561)
texture = ExtResource("10_uytag")

[node name="Moss13" type="Sprite2D" parent="Ground" index="15"]
position = Vector2(3733, 609)
texture = ExtResource("10_uytag")

[node name="House" parent="Ground" index="16" instance=ExtResource("11_8e7g4")]
position = Vector2(-977, 3583)
rotation = -2.57785

[node name="LightFanAnimation" parent="Ground/House" index="4" instance=ExtResource("10_3j4xe")]
position = Vector2(-20.2601, 491.949)

[node name="SteamVent" parent="Ground" index="17" instance=ExtResource("12_0mfos")]
position = Vector2(-477, 1192)

[node name="Drone" parent="." index="2" instance=ExtResource("17_8npj8")]
position = Vector2(0, 1029)

[node name="Gate" parent="." index="3" instance=ExtResource("18_oevxa")]
position = Vector2(737, -2)

[connection signal="player_entered_house" from="Ground/House" to="." method="_on_house_player_entered_house"]
[connection signal="player_exited_house" from="Ground/House" to="." method="_on_house_player_exited_house"]
[connection signal="player_entered_gate" from="Gate" to="." method="_on_gate_player_entered_gate"]
[connection signal="player_exited_gate" from="Gate" to="." method="_on_gate_player_exited_gate"]
